# wello

./: Cargo.toml  README.md
.github/workflows/: web-demo.yml
examples/scenes/: Cargo.toml
examples/scenes/src/: mmark.rs  test_scenes.rs
examples/simple/src/: main.rs
examples/simple_sdl2/src/: main.rs
examples/with_winit/: Cargo.toml
examples/with_winit/src/: lib.rs
glifo/src/: glyph.rs
sparse_strips/vello_bench/: Cargo.toml
sparse_strips/vello_bench/src/: allocator.rs  glyph.rs
sparse_strips/vello_bench/src/fine/: gradient.rs  strip.rs
sparse_strips/vello_common/: Cargo.toml
sparse_strips/vello_common/src/: glyph.rs
sparse_strips/vello_cpu/examples/wasm_cpu/: Cargo.toml
sparse_strips/vello_example_scenes/: Cargo.toml
sparse_strips/vello_example_scenes/src/: text.rs
sparse_strips/vello_hybrid/: Cargo.toml
sparse_strips/vello_hybrid/examples/native_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/wgpu_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/wgpu_webgl/src/: lib.rs
sparse_strips/vello_hybrid/examples/winit/src/: main.rs  render_context.rs
sparse_strips/vello_sparse_tests/: Cargo.toml
vello/src/: util.rs
vello_encoding/src/: glyph_cache.rs
xtask/: Cargo.toml
