[package]
name = "xtask"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dev tooling for Vello"
keywords = ["testing"]
categories = ["testing", "graphics"]


[dependencies]
kompari = { git = "https://github.com/linebender/kompari.git", rev = "7cff532edf4db62370a0f036d0567c43058a1def" }
kompari-tasks = { git = "https://github.com/linebender/kompari.git", rev = "7cff532edf4db62370a0f036d0567c43058a1def" }
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
